<resources>
    <string name="app_name">CranioWake</string>
    <string name="calculate_the_equation">calculate the equation</string>
    <string name="finish_game">Finish game</string>
    <string name="operator">+</string>
    <string name="answer">Answer:</string>
    <string name="next">next:</string>
    <string name="remember_the_following_3_numbers">Remember the following 3 Numbers</string>
    <string name="_true">true</string>
    <string name="_false">false</string>
    <string name="change_mode">change mode</string>
    <string name="focus_on_the_red_spot">Focus on the red spot</string>
    <string name="check">check</string>
    <string name="todo">TODO</string>
    <string name="select_a_game">Select a Game:</string>
    <string name="pptt_test">PPTT Test</string>
    <string name="calculating_test">Calculating Test</string>
    <string name="stroop_test">Stroop Test</string>
    <string name="reading_test">Reading Test</string>
    <string name="span_memory_test">SpanMemory Test</string>
    <string name="trailway_test">Trailway Test</string>
    <string name="middle_of_line_test">MiddleOfLine Test</string>
    <string name="four_square_test">Four Square Test</string>
    <string name="reaction_test">Reaction Test</string>
    <string name="tap_the_middle_of_the_line">tap the middle of the line</string>
    <string name="_00_00">00:00</string>
    <string name="start">start</string>
    <string name="what_can_you_see_on_this_picture">What can you see on this picture?</string>
    <string name="which_2_pictures_belong_together">which 2 pictures belong together</string>
    <string name="please_read_the_text_out_loud">please read the text out loud</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="mistakes">Mistakes</string>
    <string name="result">RESULT</string>
    <string name="game">Game</string>
    <string name="runs">runs</string>
    <string name="correct_answers">correct answers</string>
    <string name="tokentest">TokenTest</string>
    <string name="back_to_menu">back to menu</string>
    <string name="name_the_color_of_the_ink">name the color of the ink</string>
    <string name="find_the_right_token">find the right token</string>
    <string name="connect_the_right_numbers">connect the right numbers</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="stop">stop</string>
    <string name="restart">restart</string>
    <string name="wrong_answers">wrong answers</string>
    <string name="percent">%</string>
    <string name="game_mode">Game Mode:</string>
    <string name="faces">Faces</string>
    <string name="objects">Objects</string>
    <string name="square_1">square 1</string>
    <string name="square_3">square 3</string>
    <string name="square_2">square 2</string>
    <string name="square_4">square 4</string>
    <string name="results_mode_1">results mode 1</string>
    <string name="results_mode_2">results mode 2</string>
    <string name="back_to_base_result">back to base result</string>
    <string name="red">RED</string>
    <string name="_green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="yellow">YELLOW</string>
    <string name="orange">ORANGE</string>
    <string name="black">BLACK</string>
    <string name="brown">BROWN</string>
    <string name="big_white_circle">BIG WHITE CIRCLE</string>
    <string name="small_white_circle">SMALL WHITE CIRCLE</string>
    <string name="big_white_square">BIG WHITE SQUARE</string>
    <string name="small_white_square">SMALL WHITE SQUARE</string>
    <string name="big_red_circle">BIG RED CIRCLE</string>
    <string name="small_red_circle">SMALL RED CIRCLE</string>
    <string name="big_red_square">BIG RED SQUARE</string>
    <string name="small_red_square">SMALL RED SQUARE</string>
    <string name="big_green_circle">BIG GREEN CIRCLE</string>
    <string name="small_green_circle">SMALL GREEN CIRCLE</string>
    <string name="big_green_square">BIG GREEN SQUARE</string>
    <string name="small_green_square">SMALL GREEN SQUARE</string>
    <string name="big_yellow_circle">BIG YELLOW CIRCLE</string>
    <string name="small_yellow_circle">SMALL YELLOW CIRCLE</string>
    <string name="big_yellow_square">BIG YELLOW SQUARE</string>
    <string name="small_yellow_square">SMALL YELLOW SQUARE</string>
    <string name="big_black_circle">BIG BLACK CIRCLE</string>
    <string name="small_black_circle">SMALL BLACK CIRCLE</string>
    <string name="big_black_square">BIG BLACK SQUARE</string>
    <string name="small_black_square">SMALL BLACK SQUARE</string>
    <string name="small_pink_square">SMALL PINK SQUARE</string>
    <string name="small_blue_square">SMALL BLUE SQUARE</string>
    <string name="big_blue_square">BIG BLUE SQUARE</string>
    <string name="big_pink_circle">BIG PINK CIRCLE</string>
    <string name="total_mistakes">total mistakes</string>
    <string name="results_objects">Results objects</string>
    <string name="results_faces">Results faces</string>
    <string name="patient_id">Patient_ID</string>
    <string name="critical_test">Critical Test</string>
    <string name="picture_test">Picture Test</string>
    <string name="all_modes">all modes</string>
    <string name="mode_1_objects">Mode 1 / Objects</string>
    <string name="mode_1_numbers">Mode 1 / Numbers</string>
    <string name="mode_2_faces">Mode 2 / Faces</string>
    <string name="mode_2_numbers">Mode 2 / Numbers + Letters</string>
    <string name="trailwaay_test">Trailway Test</string>
    <string name="token_test">Token Test</string>
    <string name="dig_span_test">Digital Span Memory Test</string>
    <string name="pictrue_test">Picture Test</string>
    <string name="mol_test">Middle Of Line Test</string>
    <string name="math_test">Math Test</string>
    <string name="no_patient_selected">NO PATIENT SELECTED</string>
    <string name="patient_profile_placeholder">patient profile / PLACEHOLDER</string>
    <string name="fallnr">FallNr.</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="sex">sex</string>
    <string name="list_of_existing_patients">List of existing patients</string>
    <string name="patient">Patient:</string>
    <string name="fallnummer">Fallnummer:</string>
    <string name="_1234">1234</string>
    <string name="birth_date">Birth Date:</string>
    <string name="create_a_new_patient">Create a new Patient</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">lastname</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="add_patient">add patient</string>
    <string name="_0_m_a">0 m.A</string>
    <string name="_6_m_a">6 m.A</string>
    <string name="round_1">round 1</string>
    <string name="round_2">round 2</string>
    <string name="round_3">round 3</string>
    <string name="round_4">round 4</string>
    <string name="round_5">round 5</string>
    <string name="_minus">-</string>
    <string name="naw_drawer">naw_drawer</string>
    <string name="craniowake_user_menu">Craniowake User Menu</string>
    <string name="select_operation_mode">SELECT OPERATION MODE:</string>
    <string name="start_operation">START OPERATION</string>
    <string name="op_mode">OP MODE</string>
    <string name="verification_test">Verification Test</string>
    <string name="treshhold_test">Treshhold Test</string>
    <string name="header_model_blue">header_model_blue</string>
    <string name="the_patient_has_been_added">the patient has been added</string>
    <string name="ok">OK</string>
    <string name="header_model_red">header_model_red</string>
    <string name="this_is_not_a_medical_product">This is not a medical product!</string>
    <string name="a_complication_has_been_noted">A complication has been noted</string>
    <string name="tap_when_the_blue_screen_appears">Tap when the blue screen appears</string>
    <string name="tap_ich_bin_ein_placeholder">TAP! when the Screen turns blue</string>
    <string name="file_export">File has been exported</string>
    <string name="select_brain_area">SELECT BRAIN AREA:</string>
    <string name="monopolar">monopolar</string>
    <string name="bipolar">bipolar</string>
    <string name="epidural" translatable="false">epidural</string>
    <string name="cortical" translatable="false">cortical</string>
    <string name="subcortical" translatable="false">subcortical</string>
    <string name="stimulation">stimulation</string>
    <string name="stimulate">stimulate</string>
    <string name="export_csv">export csv</string>
    <string name="patient_list">patient list</string>
    <string name="user_management">User management</string>
    <string name="export">Export</string>
    <string name="vigilance_global">Vigilance &amp; Global</string>
    <string name="cranial_nerves">Cranial Nerves</string>
    <string name="sensory_function">Sensory Function</string>
    <string name="motor_function">Motor Function</string>
    <string name="reflexes">Reflexes</string>
    <string name="latent_arm_palsy">Latent Arm Palsy</string>
    <string name="latent_leg_palsy">Latent Leg Palsy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upper_extremity_right">Upper Extremity Right</string>
    <string name="upper_extremity_left">Upper Extremity Left</string>
    <string name="shoulder_abduction">Shoulder Abduction</string>
    <string name="elbow_flexion">Elbow Flexion</string>
    <string name="elbow_extension">Elbow Extension</string>
    <string name="finger_extension">Finger Extension</string>
    <string name="finger_flexion">Finger Flexion</string>
    <string name="lower_extremity_right">Lower Extremity Right</string>
    <string name="lower_extremity_left">Lower Extremity Left</string>
    <string name="hip_flexion">Hip Flexion</string>
    <string name="knee_flexion">Knee Flexion</string>
    <string name="knee_extension">Knee Extension</string>
    <string name="ankle_dorsiflexion">Ankle Dorsiflexion</string>
    <string name="ankle_plantarflexion">Ankle Plantarflexion</string>
    <string name="pain">pain</string>
    <string name="paraesthesia">paraesthesia</string>
    <string name="anaesthesia">anaesthesia</string>
    <string name="olfactorius_hn_i">Olfactorius HN I</string>
    <string name="opticus_hn_ii">Opticus HN II</string>
    <string name="occular_motility">Occular Motility HN III, IV, VI</string>
    <string name="trigeminus">Trigeminus HN V</string>
    <string name="facialis">Facialis HN VII</string>
    <string name="acusticus">Acusticus HN VII</string>
    <string name="glosopharyngeus">Glosopharynheus HN IX</string>
    <string name="vagus">Vagus HN X</string>
    <string name="accessorius">Accessorius HN XI</string>
    <string name="hypoglossus">Hypoglossus HN XII</string>
    <string name="glasgow_coma_scale">Glasgow Coma Scale</string>
    <string name="orientation">Orientation</string>
    <string name="meningismus">Meningismus</string>
    <string name="gait">Gait</string>
    <string name="coordination">Coordination</string>
    <string name="neglect">Neglect</string>
    <string name="duesseldorf_read_game_text">Düsseldorf\n\nDüsseldorf is the capital of the state of North Rhine-Westphalia. The trade fair city is home to a large number of listed companies, including Henkel AG. Düsseldorf is the German location with the highest turnover for auditing, corporate and legal consulting, advertising and clothing fashion, as well as an important banking (and industrial) location. Düsseldorf Airport is the intercontinental hub of North Rhine-Westphalia.</string>
</resources>