<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/user_management">
        <menu>
            <item
                android:id="@+id/item_newUserId"
                android:icon="@drawable/ic_patient_icon"
                android:title="@string/add_patient" />
            <item
                android:id="@+id/item_userListId"
                android:icon="@drawable/ic_user_list_icon"
                android:title="@string/patient_list" />
        </menu>
    </item>

    <item android:title="@string/export">
        <menu>
            <item
                android:id="@+id/item_exportId"
                android:icon="@drawable/ic_export_icon"
                android:title="@string/export_csv" />
        </menu>
    </item>

</menu>