<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ppt_act_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/which_2_pictures_belong_together"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/finish_pptt_game"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/dirtyLightBlue"
                android:onClick="finishPPTTGame"
                android:text="@string/finish_game"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/design_default_color_background" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ppttFalseButton"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="#D64F4C"
                android:onClick="setPatientRecognizedObjectsInPicture"
                android:text="@string/_false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/pptt_test_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/ppttTrueButton"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:background="#8BC34A"
                android:onClick="setPatientRecognizedObjectsInPicture"
                android:text="@string/_true"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>