<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/warning_icon"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/mediumBlue"
        android:contentDescription="@string/header_model_blue"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/menu_person_main_foreground" />

    <TextView
        android:id="@+id/text_dialog_information_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/warning_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/file_export"
        android:textColor="#ff000000"
        android:textSize="26sp" />

    <Button
        android:id="@+id/end_note_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog_information_csv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/dirtyLightBlue"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ok"
        android:textColor="#FFFFFF" />

</RelativeLayout>